	
1.9.0:
	-> tag-search: minimum number of characters in tagname reduced to 1 (to be able to search for tags like e.g. "hi" or "p")
	-> bugfix: do *not* select underlying shape if image is moved with left mouse button
	-> ground truth management features
	-> rename test set to validation set as it is the more accurate term
	-> Allow deletion of HTR model via context menu (HTR overview table -> right-click -> Delete model...)
	-> HTR model metadata can be edited by owner/curator of model
	-> first draft of P2PaLA training (for interested early adopters only)
	-> bugfix: jumping to location of search result did not work anymore if page had to be changed
	-> bugfix: column-sensitive sorting resulted in errors -> skip those cases and sort by y-x coords only
	-> fix several layout issues
	
1.9.1:
	-> bugfix: force merge of baselines in horizontal direction
	
1.10.0:
	-> HTR ground truth data sets may be copied to a new document via right-click context menu
	-> HTR sharing dialog accessible via right-click context menu
	-> CITlab HTR configuration allows to select integrated dictionary or language model built from its train data set (available for models trained after 6.11.2018 [sic])
	-> bugfix: baselines were associated to wrong parent shapes on splitting with custom line
	-> CITlab HTR+ display bugfix: the model used for recognition is the one from the last epoch => display CER values from final training iteration.
	-> added Text2Image options
	
1.10.1:
	-> P2PaLA train dialog - "Analyze structure types" fixes
	-> HTR configuration dialog bugfix: did not load when stored configuration contained a deleted model
	-> fix a memory leak in CanvasImage
	-> xlsx export: concat continued tags
	
1.11.0:
	-> integrate baseline error rate tool
	-> improve P2PaLA train dialog - check structures and merged-structures consistency
	-> status change of one page is checked for reasonableness and creates new transcript version
	