@@ -399,6 +399,10 @@ public class ToolsWidgetListener implements SelectionListener {
 							pm.addParameter(JobConstP2PaLA.MIN_AREA_PAR, conf.minArea);	
 						}
 						pm.addParameter(JobConstP2PaLA.RECTIFY_REGIONS_PAR, conf.rectifyRegions);
+						pm.addParameter(JobConstP2PaLA.ENRICH_EXISTING_TRANSCRIPTIONS_PAR, conf.enrichExistingTranscriptions);
+						pm.addParameter(JobConstP2PaLA.LABEL_REGIONS_PAR, conf.labelRegions);
+						pm.addParameter(JobConstP2PaLA.LABEL_LINES_PAR, conf.labelLines);
+						pm.addParameter(JobConstP2PaLA.LABEL_WORDS_PAR, conf.labelWords);
 						
 						if (diag.isDocsSelected() && diag.getDocs() != null && Storage.getInstance().isAdminLoggedIn()){
 							// NEW
