@@ -693,4 +693,5 @@ CHANGES AND BUGFIXES
 	-> integrate baseline error rate tool
 	-> improve P2PaLA train dialog - check structures and merged-structures consistency
 	-> status change of one page is checked for reasonableness and creates new transcript version
+	-> label existing layouts using P2PaLA
 	
